# toast

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml
src/: App.cpp  App.hpp  AppState.cpp  AppState.hpp  BuildDate.cpp  BuildDate.hpp  CRC32.hpp  CanvasState.hpp  ConfigManager.cpp  ConfigManager.hpp  ConsoleSplash.cpp  ConsoleSplash.hpp  CxxDemangle.cpp  CxxDemangle.hpp  Easings.hpp  EditorDataPackage.cpp  EditorDataPackage.hpp  Files.cpp  Files.hpp  Logging.cpp  Logging.hpp  Macro.hpp  MainThreadTaskManager.cpp  MainThreadTaskManager.hpp  MtCommandManager.cpp  MtCommandManager.hpp  OnionSkinState.hpp  PlayerManager.cpp  PlayerManager.hpp  SelectionState.cpp  SelectionState.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  Singleton.hpp  TerminateHandler.cpp  TerminateHandler.hpp  ThemeManager.cpp  ThemeManager.hpp  (+9 more)
src/App/: Actions.cpp  Actions.hpp  PopupHandler.cpp  PopupHandler.hpp  Popups.cpp  Popups.hpp  Shortcuts.cpp  Shortcuts.hpp
src/App/popups/: AllPopups.hpp  EditAnimationName.cpp  EditAnimationName.hpp  EditPartName.cpp  EditPartName.hpp  MInterpolateKeys.cpp  MInterpolateKeys.hpp  MOptimizeGlobal.cpp  MOptimizeGlobal.hpp  MPadRegion.cpp  MPadRegion.hpp  MTransformAnimation.cpp  MTransformAnimation.hpp  MTransformArrangement.cpp  MTransformArrangement.hpp  MTransformCellanim.cpp  MTransformCellanim.hpp  ModifiedTextureSize.cpp  ModifiedTextureSize.hpp  Popup.cpp  Popup.hpp  Popup_CloseModifiedSession.hpp  Popup_DeleteAnimation.hpp  Popup_EditAnimationName.hpp  Popup_EditPartName.hpp  Popup_EditorDataExpected.hpp  Popup_ExitWithChanges.hpp  Popup_MInterpolateKeys.hpp  Popup_MOptimizeGlobal.hpp  Popup_MPadRegion.hpp  Popup_MTransformAnimation.hpp  Popup_MTransformArrangement.hpp  Popup_MTransformCellanim.hpp  Popup_ModifiedTextureSize.hpp  Popup_SessionErr.hpp  Popup_SheetRepackFailed.hpp  Popup_SpritesheetManager.hpp  Popup_SwapAnimation.hpp  Popup_TextureExportFailed.hpp  Popup_WaitForModifiedTexture.hpp  (+8 more)
src/_binary/images/: toastIcon.png.h  toastIcon_title.png.h
src/anim/: Animatable.cpp  Animatable.hpp  CellAnim.cpp  CellAnim.hpp  CellanimHelpers.cpp  CellanimHelpers.hpp  CellanimRenderer.cpp  CellanimRenderer.hpp  CtrCellAnim.hpp  RevCellAnim.cpp  RevCellAnim.hpp  RvlCellAnim.cpp  RvlCellAnim.hpp
src/archive/: Archive.cpp  Archive.hpp  DARCH.cpp  DARCH.hpp  SARC.cpp  SARC.hpp  U8.cpp  U8.hpp  U8Archive.cpp  U8Archive.hpp
src/cellanim/: CellAnim.cpp  CellAnim.hpp  CellAnimHelpers.cpp  CellAnimHelpers.hpp  CellAnimRenderer.cpp  CellAnimRenderer.hpp  CellanimHelpers.hpp  CellanimRenderer.cpp  CellanimRenderer.hpp
src/command/: BaseCommand.hpp  CommandDeleteAnimation.hpp  CommandDeleteAnimationKey.hpp  CommandDeleteArrangement.hpp  CommandDeleteArrangementPart.hpp  CommandDeleteManyAnimationKeys.hpp  CommandInsertAnimation.hpp  CommandInsertAnimationKey.hpp  CommandInsertArrangement.hpp  CommandInsertArrangementPart.hpp  CommandModifyAnimation.hpp  CommandModifyAnimationKey.hpp  CommandModifyAnimationName.hpp  CommandModifyAnimations.hpp  CommandModifyArrangement.hpp  CommandModifyArrangementPart.hpp  CommandModifyArrangements.hpp  CommandModifySpritesheet.hpp  CommandMoveAnimationKey.hpp  CommandMoveArrangementPart.hpp  CommandSetAnimationInterpolated.hpp  CommandSetArrangementMode.hpp  CommandSwapAnimations.hpp  CommandSwitchCellanim.hpp  CompositeCommand.hpp
src/compression/: NZlib.cpp  NZlib.hpp  Yaz0.cpp  Yaz0.hpp
src/compression/Yaz0/: Compress.cpp  Compress.hpp  README.md  Window.cpp  Window.hpp
src/font/: CustomFont.h  FontAwesome.h  FontAwesomeData.h
src/manager/: AppState.hpp  AsyncTaskManager.cpp  AsyncTaskManager.hpp  ConfigManager.cpp  ConfigManager.hpp  MainThreadTaskManager.cpp  MainThreadTaskManager.hpp  PlayerManager.cpp  PlayerManager.hpp  PromptPopupManager.cpp  PromptPopupManager.hpp  SessionManager.cpp  SessionManager.hpp  Singleton.hpp  ThemeManager.cpp  ThemeManager.hpp
src/stb/: stb_dxt.h  stb_dxt_impl.cpp  stb_image.h  stb_image_impl.cpp  stb_image_write_impl.cpp
src/task/: AsyncTask.cpp  AsyncTask.hpp  AsyncTaskExportSession.cpp  AsyncTaskExportSession.hpp  AsyncTaskManager.cpp  AsyncTaskManager.hpp  AsyncTaskOptimizeCellanim.cpp  AsyncTaskOptimizeCellanim.hpp  AsyncTaskPushSession.cpp  AsyncTaskPushSession.hpp  AsyncTask_ExportSessionTask.cpp  AsyncTask_ExportSessionTask.hpp  AsyncTask_OptimizeCellanim.cpp  AsyncTask_OptimizeCellanim.hpp  AsyncTask_PushSessionTask.cpp  AsyncTask_PushSessionTask.hpp
src/texture/: APNGHack.cpp  APNGHack.hpp  CTPK.cpp  CTPK.hpp  CtrImageConvert.cpp  CtrImageConvert.hpp  ImageConvert.cpp  ImageConvert.hpp  PaletteUtils.hpp  RvlImageConvert.cpp  RvlImageConvert.hpp  RvlPalette.cpp  RvlPalette.hpp  TPL.cpp  TPL.hpp  Texture.cpp  Texture.hpp  TextureEx.cpp  TextureEx.hpp  TextureGroup.cpp  TextureGroup.hpp
src/util/: ArrangePartMatchUtil.cpp  ArrangePartMatchUtil.hpp  BezierUtil.cpp  BezierUtil.hpp  CRC32Util.hpp  CxxDemangleUtil.cpp  CxxDemangleUtil.hpp  EaseUtil.hpp  FileUtil.cpp  FileUtil.hpp  MyPathUtil.cpp  MyPathUtil.hpp  ShiftJISUtil.cpp  ShiftJISUtil.hpp  SpritesheetFixUtil.cpp  SpritesheetFixUtil.hpp  TweenAnimUtil.cpp  TweenAnimUtil.hpp  UIUtil.cpp  UIUtil.hpp
src/window/: BaseWindow.hpp  WindowAbout.cpp  WindowAbout.hpp  WindowCanvas.cpp  WindowCanvas.hpp  WindowConfig.cpp  WindowConfig.hpp  WindowHybridList.cpp  WindowHybridList.hpp  WindowImGuiDemo.cpp  WindowImGuiDemo.hpp  WindowImguiDemo.cpp  WindowImguiDemo.hpp  WindowInspector.cpp  WindowInspector.hpp  WindowRoot.cpp  WindowRoot.hpp  WindowSpritesheet.cpp  WindowSpritesheet.hpp  WindowTimeline.cpp  WindowTimeline.hpp
src/window/WindowInspector/: LvlAnimation.cpp  LvlArrangement.cpp  LvlKey.cpp  WindowInspector_Animation.cpp  WindowInspector_Arrangement.cpp  WindowInspector_Key.cpp
toast.app/Contents/: Info.plist
